# paraphrase-metrics

./: README.md  demo.ipynb  requirements.txt  setup.cfg
mrpc_streamlit/: README.md  app.py  generate_scores.ipynb  mrpc_test_corrected.csv  mrpc_test_scores.csv  mrpc_train_scores.csv
paper/: README.md  requirements.txt  setup.sh
paper/classifier/: classifier_train.ipynb  result_reader.ipynb  train.py  train_mrpc.sh  train_paws.sh
paper/classifier/results/mrpc/deberta-base/output_1/: all_results.json  test_results.json  valid_results.json
paper/classifier/results/mrpc/deberta-base/output_2/: all_results.json  test_results.json  valid_results.json
paper/classifier/results/mrpc/deberta-base/output_3/: all_results.json  test_results.json  valid_results.json
paper/classifier/results/mrpc/deberta-base/output_4/: all_results.json  test_results.json  valid_results.json
paper/classifier/results/mrpc/deberta-base/output_5/: all_results.json  test_results.json  valid_results.json
paper/classifier/results/mrpc/deberta-large/output_1/: all_results.json  test_results.json  (+1 more)
paper/datasets/: dataset_stats.ipynb  generate_seq2seq_dataset.ipynb  metrics.py  mrpc_correction.ipynb  mrpc_train_corrected.csv  paper_diagrams.ipynb  paper_examples.ipynb
paper/datasets/mrpc/: README.md  mrpc_converter.ipynb  mrpc_test.csv  mrpc_train.csv
paper/datasets/paws/: README.md
paper/generation/: metrics.py  paraphrase_test.ipynb  train_bart.sh  train_pegasus.sh  train_t5_large.sh
src/paraphrase_metrics/: metrics.py
textdiff_streamlit/: app.py  requirements.txt
(+42 files in other folders)
