[metadata]
name = paraphrase-metrics
version = 0.0.1
author = Timothy Liu
author_email = timothy_liu@mymail.sutd.edu.sg
description = Paraphrase Metrics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlkh/paraphrase-metrics
project_urls =
    Bug Tracker = https://github.com/tlkh/paraphrase-metrics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    transformers
    datasets
    spacy
    scipy
    textdistance[extras]
    scikit-learn
    ipywidgets
    tqdm
    rouge
    nltk
    spacy-transformers
    sentencepiece
    sacrebleu==1.*

[options.packages.find]
where = src